css/styles.css
/* Set up global variables */
:root {
    --gold: #e6b102;
    --gray: #253237;
    --off-white: #ebebeb;
}

/* Reset CSS */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
    /* color: black; */
    font-family: 'Gruppo', Arial, Helvetica, sans-serif;
}

/* Header and navigation bar */
.navbar {
    position: fixed;
    background-color: transparent;
    width: 100%;
    padding: 30px 0;
    top: 0;
    z-index: 999;
    transition: .3s linear;
}

.inner-width:not(#layer) {
    max-width: 1300px;
    padding: 0 40px;
    margin: auto;
}

.navbar .inner-width {
    max-width: 1300px;
    padding: 0 40px;
    margin: auto;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.logo {
    width: 50px;
    height: 50px;
    background-image: url(../images/logo.jpg);
    background-repeat: no-repeat;
    background-size: contain;
    border: 2px solid white;
    border-radius: 50%;
}

/* Hamburger bar */
.menu-toggler {
    background: none;
    width: 40px;
    border: none;
    cursor: pointer;
    position: relative;
    outline: none;
    z-index: 999;
    display: none;
}

/* The "buns" and "burger" */
.menu-toggler span {
    display: block;
    height: 4px;
    background-color: white;
    margin: 8px 0;
    position: relative;
    transition: .3s linear;
}

/* Menu items */
.navbar-menu a {
    color: white;
    font-size: 25px;
    /* useful if you're using Ubuntu font or a font with all the weights */
    /* font-weight: 500; */
    margin-left: 15px;
    transition: .2s linear;
    padding: 15px;
}

.navbar-menu a:hover {
    color: var(--gold);
}

/* Menu when scrolling down */
.sticky {
    background-color: var(--gray);
    padding: 18px 0;
}

/* If you want a different logo when you scroll down, change here */
/* .sticky .logo {
    background-image: url(../images/);
} */

/* .sticky .navbar-menu a {
} */

/* Landing photo, social media links and calls to action */
#home {
    height: 100vh;
    min-height: 500px;
    background: url(../images/gyuto-wood-whole-diagonal-3d.jpg) no-repeat;
    /* background-attachment: fixed; */
    background-size: cover;
    /* Play around with background-position to adjust the background img */
    /* background-position: bottom left; */
    /* background-position: center; */
    background-position: 0 -370px;
    overflow: hidden;
}

#home .inner-width {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    width: 100vw;
    text-align: center;
    flex-direction: column;
    background-color: #25323779;
    padding-top: 200px;
}

.home .content {
    width: 100%;
    color: white;
}

#home .content h1 {
    font-size: 80px;
    color: var(--gold);
    margin-bottom: 60px;
    box-shadow: 0px 0px 80px 69px #25323726;
    background-color: #25323726;
}

/* OPTIONAL ANIMATION BELOW */
/* This part is optional, maybe for additional features */
/* #home .content h1::after {
    content: "#";
    animation: textchange 10s linear infinite;
} */

/* @keyframes textchange {
    25% {
        content: "*";
    }
    50% {
        content: "$";
    }
    75% {
        content: "@";
    }
} */

/* Social media links */
.sm a {
    color: white;
    font-size: 35px;
    margin: 0 20px;
    transition: .3s linear;
    padding: 15px;
}

.sm a:hover,
/* .navbar-menu a:hover, */
#home .buttons a:hover {
    background-color: #253237c9;
    /* background-color: var(--gray); */
    /* color: white; */
    color: var(--gold);
    border-radius: 10px;
}

#home .buttons {
    margin-top: 60px;
}

#home .buttons a {
    display: inline-block;
    margin: 15px 30px;
    color: white;
    font-size: 25px;
    transition: 0.3s linear;
    padding: 15px;
    /* width: 180px; */
    border: 1px solid;
    border-radius: 10px;
}

/********************************************************
            JUST SO IT'S EASIER TO WORK!!!
*********************************************************/
/* section#home {
    display: none;
}

.navbar {
    display: none;
} */

/******************************************************** 
            WATCH OUT !!! 
            Delete the above snippet soon!!
*********************************************************/

section:not(#home) {
    padding: 100px 0;
    background-color: var(--off-white);
}

.section-title {
    text-align: center;
    margin-bottom: 80px;
    position: relative;
    font-size: 40px;
    padding-bottom: 20px;
    color: var(--gray);
}

.section-title::before {
    content: "";
    position: absolute;
    width: 80px;
    height: 3px;
    background-color: var(--gray);
    bottom: 0;
    left: calc(50% - 40px);
}

.section-title::after {
    content: "";
    position: absolute;
    width: 16px;
    height: 10px;
    background-color: var(--gold);
    background-color: #558C8C;
    border: 4px solid var(--off-white);
    left: calc(50% - 12px);
    bottom: -7px;
}

.about-content {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}

.about-pic {
    width: 200px;
    height: 200px;
    border-radius: 50%;
    margin-right: 100px;
}

.about-text {
    flex: 1;
}

.about-text h3 {
    margin: 20px 0;
    font-size: 20px;
    color: #558C8C;
}

.about-text h3 span:nth-child(1)::after,
.about-text h3 span:nth-child(2)::after {
    content: "";
    width: 6px;
    height: 6px;
    border-radius: 50%;
    background-color: var(--gray);
    display: inline-block;
    margin: 0 15px 2px;
}

.about-text p {
    /* font-size: 17px; */
    text-align: justify;
    line-height: 26px;
    margin-top: 20px;
    color: var(--gray);
}

p {
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
}

/* Mobile phone and tablets */
@media screen and (max-width: 980px) {
    #home {
        background-position: center;
    }

    #home .content h1 {
        font-size: 70px;
    }

    .menu-toggler {
        display: block;
    }

    .navbar-menu {
        position: fixed;
        height: 100vh;
        width: 100%;
        top: 0;
        right: -100%;
        background-color: #253237;
        padding: 100px 50px;
        display: flex;
        align-items: center;
        justify-content: space-around;
        flex-wrap: wrap;
        transition: .3s linear;
        text-align: center
    }

    .navbar-menu a {
        width: 100%;
        font-size: 50px;
    }

    .navbar-menu.active {
        right: 0;
    }

    .menu-toggler.active span:nth-child(1) {
        transform: rotate(-45deg);
        top: 6px;
    }

    .menu-toggler.active span:nth-child(2) {
        display: none;
    }

    .menu-toggler.active span:last-child {
        transform: rotate(45deg);
        bottom: 6px;
    }
    
    .inner-width:not(#layer) {
        max-width: 800px;
    }

    .about-pic {
        margin: 0 auto 60px;
    }

    .about-text {
        flex: 100%;
        text-align: center;
    }
}

/* Mobile phones */
@media screen and (max-width: 450px) {
    #home .inner-width {
        padding: 0;
    }

    #home .content h1 {
        margin-top: 60px;
        margin-bottom: 40px;
        font-size: 60px;
    }

    #home {
        background-image: url(../images/gyuto-wood-whole-diagonal-3d-mobile.jpg);
    }

    #home .buttons {
        margin-top: 40px;
    }

    #home .buttons a {
        margin: 15px 20px;
    }

    section:not(#home) {
        padding: 60px 0;
        background-color: var(--off-white);
    }

    .section-title {
        margin-bottom: 40px;
    }

    .about-pic {
        margin-bottom: 40px;
    }

    .about-text h3 {
        display: flex;
        flex-direction: column;
    }

    .about-text h3 span:nth-child(1)::after,
    .about-text h3 span:nth-child(2)::after {
        display: none;
    }
}

/* Mobile phones landscape mode */
@media screen and (max-height: 450px) {
    #home .inner-width {
        padding: 0;
    }

    #home {
        min-height: 0;
    }

    #home .content {
        margin-top: 80px;
    }

    #home .content h1 {
        font-size: 50px;
        margin: 0 10px 10px;
    }

    #home .buttons {
        margin-top: 10px;
    }
}

